@@ -1,8 +1,0 @@
-SOURCES += tst_qexecstringlist.cpp
-QT = core testlib
-
-mac:CONFIG -= app_bundle
-CONFIG -= debug_and_release_target
-
-
-TARGET = qexecstringlist
