@@ -1,6 +1,0 @@
-DECL|class|tst_QExecStringList
-DECL|function|main
-DECL|function|testA
-DECL|function|testB
-DECL|function|testB_data
-DECL|function|testC
